AUTOMAKE_OPTIONS = dist-bzip2 dist-zip
SUBDIRS = . src include XMLParserModules ImageCodecModules RendererModules WindowRendererSets ScriptingModules Samples XMLRefSchema makefiles

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = CEGUI.pc CEGUI-OPENGL.pc

EXTRA_DIST=doxyfile \
           TinyXML-License