if BUILD_OPENGL_RENDERER
OPENGL=OpenGLGUIRenderer
endif
if BUILD_IRRLICHT_RENDERER
IRRLICHT=IrrlichtRenderer
endif
if BUILD_DIRECTFB_RENDERER
DIRECTFB=directfbRenderer
endif
SUBDIRS = . \
          $(OPENGL) \
          $(IRRLICHT) \
          $(DIRECTFB) \
          directx81GUIRenderer \
          directx9GUIRenderer \
          directx10GUIRenderer
