if BUILD_OPENGL_RENDERER
OPENGL=OpenGLGUIRenderer
endif
if BUILD_OGRE_RENDERER
OGRE=OgreGUIRenderer
endif
if BUILD_IRRLICHT_RENDERER
IRRLICHT=IrrlichtGUIRenderer
endif
if BUILD_DIRECTFB_RENDERER
DIRECTFB=DirectFBGUIRenderer
endif
SUBDIRS = . $(OPENGL) $(OGRE) $(IRRLICHT) $(DIRECTFB) \
          Direct3D9GUIRenderer Direct3D10GUIRenderer