if CEGUI_BUILD_SAMPLES

if CEGUI_BUILD_LUA_MODULE
CEGUILUA_DEMOS=Demo8
endif

SUBDIRS = common \
          datafiles \
          Demo6 \
          Demo7 \
          FirstWindow \
          FalagardDemo1 \
          FontDemo \
          InstancedWindows \
          Minesweeper \
          ScrollablePaneDemo \
          TabControlDemo \
          TextDemo \
          TreeDemo \
          $(CEGUILUA_DEMOS)
endif

EXTRA_DIST = ReadMe.txt \
             bin/keepme
