install(DIRECTORY animations DESTINATION ${CEGUI_DATA_INSTALL_DIR} COMPONENT cegui_samples)
#install(DIRECTORY configs DESTINATION ${CEGUI_DATA_INSTALL_SUBDIR} COMPONENT cegui_samples)
install(DIRECTORY fonts DESTINATION ${CEGUI_DATA_INSTALL_DIR} COMPONENT cegui_samples)
install(DIRECTORY imagesets DESTINATION ${CEGUI_DATA_INSTALL_DIR} COMPONENT cegui_samples)
install(DIRECTORY layouts DESTINATION ${CEGUI_DATA_INSTALL_DIR} COMPONENT cegui_samples)
install(DIRECTORY looknfeel DESTINATION ${CEGUI_DATA_INSTALL_DIR} COMPONENT cegui_samples)
install(DIRECTORY lua_scripts DESTINATION ${CEGUI_DATA_INSTALL_DIR} COMPONENT cegui_samples)
install(DIRECTORY schemes DESTINATION ${CEGUI_DATA_INSTALL_DIR} COMPONENT cegui_samples)
install(DIRECTORY xml_schemas DESTINATION ${CEGUI_DATA_INSTALL_DIR} COMPONENT cegui_samples)

