install(DIRECTORY animations DESTINATION ${CEGUI_INSTALL_DATA_DIR} COMPONENT cegui_datafiles)
install(DIRECTORY fonts DESTINATION ${CEGUI_INSTALL_DATA_DIR} COMPONENT cegui_datafiles)
install(DIRECTORY imagesets DESTINATION ${CEGUI_INSTALL_DATA_DIR} COMPONENT cegui_datafiles)
install(DIRECTORY layouts DESTINATION ${CEGUI_INSTALL_DATA_DIR} COMPONENT cegui_datafiles)
install(DIRECTORY looknfeel DESTINATION ${CEGUI_INSTALL_DATA_DIR} COMPONENT cegui_datafiles)
install(DIRECTORY lua_scripts DESTINATION ${CEGUI_INSTALL_DATA_DIR} COMPONENT cegui_datafiles)
install(DIRECTORY schemes DESTINATION ${CEGUI_INSTALL_DATA_DIR} COMPONENT cegui_datafiles)
install(DIRECTORY xml_schemas DESTINATION ${CEGUI_INSTALL_DATA_DIR} COMPONENT cegui_datafiles)
