dist-hook:
	mkdir $(distdir)/configs

nobase_dist_pkgdata_DATA = animations/example.xml \
             fonts/batang.ttf \
             fonts/Batang-26.font \
             fonts/DejaVuSans-10.font \
             fonts/DejaVuSans.ttf \
             fonts/FairChar-30.font \
             fonts/fkp-16.font \
             fonts/fkp.de.pcf \
             fonts/baemuk.txt \
             fonts/Legal.txt \
             imagesets/DriveIcons.imageset \
             imagesets/DriveIcons.png \
             imagesets/FairChar.imageset \
             imagesets/FairChar.tga \
             imagesets/GPN-2000-001437.tga \
             imagesets/logo.png \
			 imagesets/OgreTray.imageset \
			 imagesets/OgreTrayImages.png \
             imagesets/ReadMe.txt \
             imagesets/TaharezLook.imageset \
             imagesets/TaharezLook.tga \
             imagesets/Vanilla.imageset \
             imagesets/WindowsLook.imageset \
             imagesets/WindowsLook.tga \
             imagesets/vanilla.tga \
             layouts/Console.wnd \
             layouts/Demo7Windows.layout \
             layouts/Demo8.layout \
             layouts/DragDropDemo.layout \
             layouts/FontDemo.layout \
             layouts/TabControlDemo.layout \
             layouts/TabPage.layout \
             layouts/TabPage1.layout \
             layouts/TabPage2.layout \
             layouts/TextDemo.layout \
             layouts/TreeDemoTaharez.layout \
             layouts/VanillaConsole.layout \
             layouts/VanillaWindows.layout \
			 looknfeel/InventoryComponents.looknfeel \
			 looknfeel/OgreTray.looknfeel \
             looknfeel/TaharezLook.looknfeel \
             looknfeel/Vanilla.looknfeel \
             looknfeel/WindowsLook.looknfeel \
             lua_scripts/demo8.lua \
             schemes/Demo8.scheme \
			 schemes/OgreTray.scheme \
             schemes/TaharezLook.scheme \
             schemes/TaharezLookWidgetAliases.scheme \
             schemes/TaharezLookWidgets.scheme \
             schemes/VanillaSkin.scheme \
             schemes/WindowsLook.scheme \
             schemes/WindowsLookWidgets.scheme \
             xml_schemas/Animation.xsd \
             xml_schemas/CEGUIConfig.xsd \
             xml_schemas/Falagard.xsd \
             xml_schemas/Font.xsd \
             xml_schemas/GUILayout.xsd \
             xml_schemas/GUIScheme.xsd \
             xml_schemas/Imageset.xsd
