EXTRA_DIST = ChangeLog \
			COPYING \
			PCRE-LICENSE \
			TinyXML-License \
			doxygen/arch_overview.dox \
			doxygen/authors.dox \
			doxygen/changelog.dox \
			doxygen/code_standards.dox \
			doxygen/devel.dox \
			doxygen/doxyfile \
			doxygen/glew-lic.dox \
			doxygen/mainpage.dox \
			doxygen/mitlic.dox \
			doxygen/pcre-lic.dox \
			doxygen/tinyxml-lic.dox \
			doxygen/BuildDocs.bat \
			doxygen/falagard/fal_baseclass_ref.dox \
			doxygen/falagard/fal_element_ref.dox \
			doxygen/falagard/fal_enum_ref.dox \
			doxygen/falagard/fal_intro.dox \
			doxygen/falagard/fal_main.dox \
			doxygen/falagard/fal_tut1.dox \
			doxygen/falagard/fal_wr_ref.dox \
			doxygen/falagard/gnufdl.dox \
			doxygen/tutorials/ce_guide_1.dox \
			doxygen/tutorials/ce_guide_2.dox \
			doxygen/tutorials/ce_guide_3.dox \
			doxygen/tutorials/ce_guide_4.dox \
			doxygen/tutorials/rp_setup.dox
